--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+	  {{ site.categories.Photoblog.first.content }}
           {%- if site.posts.size > 0 -%}
 	  <!--<h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>-->
             <ul class="post-list">
