--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,10 @@
     <div class="wrapper">
       <section>
         <div id="title">
-          <h1>{{ site.title | default: site.github.repository_name }}</h1>
+		<h1 style="color: #000;"><a href="{{ site.url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <span class="credits left">About <a href="{{ site.url }}/about">{{ site.github.owner_name }}</a></span>
-        </div>
+	</div>
 	<hr>
         {{ content }}
 	<br>
