--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+<div id="nav">
+  <span class="credits left"><a href="{{ page.previous.url }}">&ltPrevious Post&gt</a></span>
+  <span class="credits right"><a href="{{ page.next.url }}">&ltNext Post&gt</a></span>
+</div>
+<br>
+<br>
 <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
